@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="build_number">8078</string>
+	<string name="build_number">8079</string>
 </resources>
