@@ -1,5 +1,5 @@
 #ifndef __build_h
 #define __build_h
-#define NETXMS_VERSION_BUILD 8078
-#define NETXMS_VERSION_BUILD_STRING _T("8078")
+#define NETXMS_VERSION_BUILD 8079
+#define NETXMS_VERSION_BUILD_STRING _T("8079")
 #endif
