@@ -1,5 +1,5 @@
 package org.netxms.base;
 public final class BuildNumber {
-   public static final String TEXT = "8078";
-   public static final int NUMBER = 8078;
+   public static final String TEXT = "8079";
+   public static final int NUMBER = 8079;
 }
